# kodie-evaluation-system

./: .gitignore  CRM.md  Makefile  PDR.md  README.md  assessment-evaluation-engine-plan.md
.kiro/specs/assessment-archived-status/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/assessment-evaluation-engine/: .config.kiro  design.md  tasks.md  (+1 more)
.kiro/steering/: product.md  structure.md  tech.md
assets/: exam.json  exam.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  assessments.py  auth.py  health.py
backend/app/core/: config.py  errors.py  logger.py  security.py  utils.py
backend/app/db/: collections.py  indexes.py  mongo.py
backend/app/models/: api.py  domain.py
backend/app/repositories/: __init__.py  assessment_repository.py  auth_repository.py
backend/app/services/: analytics_service.py  assessment_service.py  auth_service.py  evaluation_engine.py  question_selection.py  ranking_service.py
backend/scripts/: exam.jsonl  seed_questions.py  seed_students.py  students.sample.csv
backend/tests/: test_assessment_service.py  test_auth_context.py  test_auth_rate_limit.py  test_auth_service.py  test_draft_bootstrap.py  test_evaluation_engine.py  test_extract.py  test_http_api.py  test_logging.py  test_question_selection.py  test_utils.py
docs/plans/: 2026-03-07-kodie-system-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  config.js  styles.css
infra/: env.example  render.yaml
scripts/: extract.py  requirements.txt
(+28 files in other folders)
