[tool.poetry]
name = "kodie-backend"
version = "0.1.0"
description = "Kodie evaluation backend"
authors = ["Kodie Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.116.0,<1.0.0"
uvicorn = { version = ">=0.35.0,<1.0.0", extras = ["standard"] }
motor = ">=3.7.0,<4.0.0"
pymongo = ">=4.12.0,<5.0.0"
pydantic = ">=2.11.0,<3.0.0"
pydantic-settings = ">=2.10.0,<3.0.0"
pyjwt = ">=2.10.0,<3.0.0"
python-ulid = ">=3.0.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.0,<9.0.0"
pytest-asyncio = ">=1.1.0,<2.0.0"
httpx = ">=0.28.0,<1.0.0"
ruff = ">=0.9.0,<1.0.0"
hypothesis = "^6.151.11"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
